[package]
  edition = "2024"
  name    = "rogue"
  version = "0.1.0"

[features]
  default = [ "dev" ]
  dev     = [  ]

[lints.clippy]
  must-use-candidate     = "allow"
  needless-pass-by-value = "allow"
  pedantic               = { level = "warn", priority = -1 }
  # type-complexity = "allow"
  cast-precision-loss = "allow"
  # missing-errors-doc = "allow"
  # must-use-candidate = "allow"
  # return-self-not-must-use = "allow"
  # similar-names = "allow"
  cast-possible-truncation = "allow"
  # used-underscore-binding = "allow"


[dependencies]
  avian2d = { version = "0.3.1", features = [
    "2d",
    "f32",
    "parry-f32",
    "parallel",
    "bevy_picking",
  ] }
  bevy = { version = "^0.16", default-features = false, features = [
    "asset_processor",
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_input_focus",
    "bevy_log",
    "bevy_picking",
    "bevy_render",
    "bevy_sprite_picking_backend",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "dynamic_linking",
    "file_watcher",
    "ktx2",
    "multi_threaded",
    "png",
    "serialize",
    "smaa_luts",
    "std",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "zstd",
  ] }
  bevy-inspector-egui = { version = "0.33.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_image",
    "bevy_render",
    "egui_clipboard",
  ] }
  bevy_rand = { version = "0.11.3", features = [ "wyrand" ] }
  clap = { version = "^4.5.47", features = [
    "cargo",
    "color",
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "string",
    "suggestions",
    "unicode",
    "usage",
    "wrap_help",
  ] }
  num-traits = "0.2.19"
  rand = "0.9.2"
  serde = { version = "1.0.219", features = [ "std", "derive" ] }
  # figment = { version = "0.10.19", features = ["toml"] }
  thiserror = "2.0.16"
tiled = "0.15.0"
  toml      = "0.9.5"
  # toml = "0.9.5"
  # anyhow = { version = "1.0.99", features = [ "std", "backtrace" ] }
  # schemars = "1.0.4"
  # serde_json = "1.0.143"


[profile.dev.package."*"]
  opt-level = 3
