[package]
  edition = "2024"
  name    = "rogue"
  version = "0.1.0"

[features]
  default = [ "dev" ]
  dev = [
    "bevy/file_watcher",
    "bevy/dynamic_linking",
    "dep:bevy-inspector-egui",
  ]

[lints.clippy]
  cast-possible-truncation = "allow"
  cast-precision-loss      = "allow"
  missing-errors-doc       = "allow"
  must-use-candidate       = "allow"
  needless-pass-by-value   = "allow"
  pedantic                 = { level = "warn", priority = -1 }
  return-self-not-must-use = "allow"
  similar-names            = "allow"
  too-many-arguments       = "allow"
  type-complexity          = "allow"
  used-underscore-binding  = "allow"


[dependencies]
  avian2d = "0.3.1"
  bevy = { version = "^0.16", default-features = false, features = [
    "asset_processor",
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_input_focus",
    "bevy_log",
    "bevy_picking",
    "bevy_render",
    "bevy_sprite_picking_backend",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "ktx2",
    "multi_threaded",
    "png",
    "serialize",
    "smaa_luts",
    "std",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "zstd",
  ] }
  bevy-inspector-egui = { version = "0.33.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_image",
    "bevy_render",
    "egui_clipboard",
  ], optional = true }
  bevy_rand = { version = "0.12.0", features = [ "wyrand" ] }
  clap = { version = "^4.5.47", features = [
    "cargo",
    "derive",
    "help",
    "std",
    "string",
    "unicode",
    "usage",
    "wrap_help",
  ] }
  rand = "0.9.2"
  serde = { version = "1.0.219", features = [ "std", "derive" ] }
  thiserror = "2.0.16"
  # bevy_ecs_tilemap = "0.16.0"
  # toml = "0.9.5"
  # anyhow = { version = "1.0.99", features = [ "std", "backtrace" ] }
  # schemars = "1.0.4"
  # serde_json = "1.0.143"
  # num-traits = "0.2.19"
  # figment = { version = "0.10.19", features = ["toml"] }


[profile.dev]
  opt-level = 1

  [profile.dev.package."*"]
    opt-level = 3
